# FluentSignalCopier

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  README.md  SECURITY.md  TASKS.md  alert_system.py  commitlint.config.js  fluent_copier.py  fluent_copier_new_gui.py  imghdr.py  logging_config.py  monitoring_dashboard.py  package-lock.json  package.json  persistence.py  pyproject.toml  requirements-dev.txt  requirements-logging.txt  requirements.txt  setup_logging.py  telegram_bridge.py  version_info.txt
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_templet.md
.github/workflows/: commitlint.yml  continuous-ai-resolver.yml  contribution-quality.yml  issue-completeness.yml  issue-dedup.yml  pr-labeler.yml  pr-quality-check.yml  protect-master.yml  release-windows.yml  welcome-first-time.yml
.husky/: commit-msg  pre-commit  pre-push
MQL5/Experts/FluentSignalCopier/: FluentSignalCopier.mq5
scripts/: install-hooks.sh  pre-push
tests/: test_basic.py  test_ea_settings.py  test_parser_new_gui.py  test_pnl_period.py  test_signal_timestamp.py  test_win_rate_display.py
web_backend/: app.py  web_settings.json
web_backend/dashboard/fluent-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web_backend/dashboard/fluent-dashboard/src/: App.css  App.tsx  api.ts  config.ts  index.css  main.tsx
web_backend/dashboard/fluent-dashboard/src/components/: Sidebar.tsx  (+4 more)
(+5 files in other folders)
